# magic_voice_be

./: .gitignore  Cargo.toml  README.md  reference.toml
simulators/db/: docker-compose.yml
simulators/db/docker-entrypoint-initdb.d/: initdb.sh
src/: main.rs
src/api/: mod.rs  openapi.rs
src/config/: mod.rs
src/db/: mod.rs
src/domain/: mod.rs
src/services/: mod.rs
